Fixed all the upload and saved issues. Fixed reszing bug. Unable to save new Cropped Image to folder.

--- a/assets/css/custom_styles.css
+++ b/assets/css/custom_styles.css
@@ -36,6 +36,7 @@ body {
 
 .crop_tool_container {
 	position: relative;
+	padding: 15px;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	background-color: #2e353d;
